[lint] clean up duplicated logic
When computing a Location for a given cookie/ASTNode, explicitly use
the same logic to compute the character offsets as the line and column
offsets.

Bug: n/a
Test: existing
Change-Id: I0d7bac0f9294729e4c692d16593b2206d004553f